2013-08-13  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compile-command): Tweak example in doc.
	* obsolete/scribe.el (scribe-mode):
	* progmodes/mixal-mode.el (mixal-mode): Quote buffer name.  (Bug#15053)

	* mail/feedmail.el (feedmail-confirm-outgoing)
	(feedmail-display-full-frame, feedmail-deduce-bcc-where): Fix types.

	* cus-start.el (truncate-partial-width-windows): Fix type.

	* emulation/viper-init.el (viper-search-scroll-threshold): Fix type.

	* net/shr.el (shr-table-horizontal-line): Fix custom type.

2013-08-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/timer.el (timer--time-setter): New function.
	(timer--time): Use it as gv-setter.

	* emacs-lisp/gv.el (gv-define-simple-setter): Output warning when
	setter is not a symbol.

2013-08-12  Grégoire Jadi  <daimrod@gmail.com>

	* mail/sendmail.el (sendmail-send-it): Don't kill the error buffer
	if sending fails.  This makes debugging easier.

2013-08-12  Juanma Barranquero  <lekktu@gmail.com>

	* xml.el (xml-parse-tag-1): Use looking-at (this reverts change in
	revno:113793, which breaks the test suite).
	https://lists.gnu.org/archive/html/emacs-devel/2013-08/msg00263.html

2013-08-12  Eli Zaretskii  <eliz@gnu.org>

	* term/w32-win.el (dynamic-library-alist): Add DLLs for zlib.

2013-08-12  Glenn Morris  <rgm@gnu.org>

	* format.el (format-annotate-function):
	Handle read-only text properties in the source.  (Bug#14887)

2013-08-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-display-html): Ignore coding system errors.
	One web site uses "utf-8lias" as the coding system.

2013-08-11  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset-valid-p): Fix check; STATES can indeed be nil.

2013-08-10  Juanma Barranquero  <lekktu@gmail.com>

	* tutorial.el (tutorial--describe-nonstandard-key): Use string-match-p.
	(tutorial--detailed-help): Remove unused local variables.
	(tutorial--save-tutorial-to): Use ignore-errors.